2013-01-26  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* file_util.h: Function for writing one of the new structs to file.

	* launcher.c: multi-estimate data should go to specified output file.

	* general_util.c: Parameter for step used when going through data added

	* general_util.h: Added some structs to make array length storage easier.

	* combinefunction.c: Function used to combine functions now works as it should,
	returning an array containing data to use.

2013-01-23  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* launcher.c: Updated to reflect changes to functions in combinefunction.c

	* combinefunction.c: Implemented a basic function combinator. Current implementation
	is rough and outputs to a file specified within the code.

2013-01-20  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* launcher.c: Estimation of multiple streams at once by the launcher. Updated
	switches to allow for this. Some commenting and more checking for null values.

	* combinefunction.c: Function skeletons for combining functions.

	* makefile.am: Added new file and dependencies generated by it to launcher.

	* scripts: Removed unused plotting scripts. Obsoleted by plotmaster.

	* estimators: All now return an est_arr rather than some returning est_data.
	Easier to integrate with the launcher and other parts of the system.

	* memory: Fixed some leaks caused by swath of changes, and some old ones.

2013-01-19  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* headers: Moved headers around in some files in src. Launcher strings
	moved into header file.

	* src/makefile.am: No longer includes muparser. Correctly added by
	configure.ac.

	* configure.ac: Checks for correct version of muparser.

	* plotmaster.sh: Plots data from the new plot

	* plots: Gnuplot code for plotting two estimates added


2013-01-13  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* estimator_piecewise.c: Fixed bug with estimation data from the first
	subinterval not being output to file.
