@@ -1,5 +1,6 @@
 #include "estimator.h"
 #include "general_util.h"
+#include <stdio.h>
 
 double_mult_arr* combine_functions(est_arr** estimates, double* time_delay, 
 			  double interval_time, int num_estimates, double step);
