@@ -1,5 +1,15 @@
+#ifndef _TEST_H
+#define _TEST_H
+
+#include <stdlib.h>
+#include <check.h>
+#include <stdio.h>
+
 Suite* math_util_suite(void);
 Suite* general_util_suite(void);
 Suite* paramlist_suite(void);
 Suite* file_util_suite(void);
 Suite* estimator_suite(void);
+Suite* combinefunction_suite(void);
+
+#endif
